--- a/public/vue-assets/css/style.css
+++ b/public/vue-assets/css/style.css
@@ -60,6 +60,8 @@
   --color-border: #D9D9D9;
   --color-hover: #FA4A4A;
   --color-white: #fff;
+  --input-focus-color: #174787;
+  --btn-bg-color: rgb(28, 102, 164);
 }
 
 .color-offwhite {
@@ -11662,7 +11664,7 @@ input[type=range]::-moz-range-thumb {
 
 .add__listing--input__field {
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   border: 1px solid var(--color-border);
   padding: 0 1.5rem;
   font-size: 1.5rem;
@@ -11674,7 +11676,7 @@ input[type=range]::-moz-range-thumb {
   font-weight: 500;
 }
 .add__listing--input__field:focus {
-  border-color: var(--color-hover);
+  border-color: var(--input-focus-color);
 }
 
 .add__listing--input__label {
@@ -11724,7 +11726,7 @@ input[type=range]::-moz-range-thumb {
 
 .add__listing--form__select {
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   border: 1px solid var(--color-border);
   padding: 0 1.5rem;
   font-size: 1.5rem;
@@ -11738,7 +11740,7 @@ input[type=range]::-moz-range-thumb {
   cursor: pointer;
 }
 .add__listing--form__select:focus {
-  border-color: var(--color-hover);
+  border-color: var(--input-focus-color);
 }
 
 .browse__file--area {
@@ -12903,4 +12905,17 @@ input[type=range]::-moz-range-thumb {
     top: 1.5rem;
     right: 1.5rem;
   }
+}
+
+.general-btn {
+  background: var(--btn-bg-color) !important;
+  border: none;
+  padding: 6px;
+  font-size: 18px;
+  border-radius: 6px;
+}
+
+.general-btn:focus {
+  box-shadow: none;
+  outline: none;
 }
